boton idiomas con estilo terminado

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,12 +11,10 @@ header {
   font-family: var(--fuentePrimaria);
 }
 
-header div.button-language {
-
-}
-
 .button-language button {
-
+  padding: .8em 2em;
+  border: 5px solid var(--colorPrimario);
+  border-radius: 35px;
 }
 
 div.logo {
