--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,11 @@
 
 }
 
+body {
+  background-image: url(../../images/background.png);
+  background-size: cover;
+}
+
 header {
   display: flex;
   font-family: var(--fuentePrimaria);
