menu con estilos terminado

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,13 +45,17 @@ div.logo {
 }
 
 div.menu {
-
+  text-align: center;
 }
 
 .menu nav {
-
+  margin-top: 1em;
 }
 
 nav a {
-
+  padding: 0 2em;
+  font-size: 1.3em;
+  font-family: var(--fuentePrimaria);
+  text-decoration: none;
+  color: var(--colorPrimario);
 }
