--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,3 +59,9 @@ nav a {
   text-decoration: none;
   color: var(--colorPrimario);
 }
+
+nav a:hover {
+  border-bottom: 3px solid var(--colorSecundario);
+  width: .5em;
+  transition: .3s;
+}
