cambiando el peso de fuente del menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,7 @@ nav a {
   font-family: var(--fuentePrimaria);
   text-decoration: none;
   color: var(--colorPrimario);
+  font-weight: bold;
 }
 
 nav a:hover {
