--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 body {
   background-image: url(../../images/background.png);
   background-size: cover;
+  background-position: center;
 }
 
 header {
