agregando section.skills sin estilo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,3 +146,32 @@ div.credits {
   font-size: .8em;
   margin-top: 2em;
 }
+
+section.skills {
+
+}
+
+div.html span {
+
+}
+
+div.html h3 {
+
+}
+
+div.css span {
+
+}
+
+div.css h3 {
+
+}
+
+div.JS span {
+
+}
+
+div.JS h3 {
+
+}
+
