--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,6 +157,7 @@ section.skills {
 .skills div.skill {
   flex: 1;
   text-align: center;
+  font-family: var(--fuentePrimaria);
 }
 
 .skill span.icon {
@@ -173,23 +174,17 @@ section.skills {
 div.html span {
 }
 
-div.html h3 {
-
+div.skill h3 {
+  font-size: 1.7em;
 }
 
 div.css span {
 
 }
 
-div.css h3 {
-
-}
 
 div.JS span {
 
 }
 
-div.JS h3 {
-
-}
 
