justificando el texto de los parrafos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,6 +169,8 @@ section.skills {
   font-size: 1.3em;
   font-family: var(--fuentePrimaria);
   font-weight: lighter;
+  text-align: justify;
+  letter-spacing: 0;
 }
 
 div.html span {
