archivos section.projects terminado

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,19 @@ div.JS span {
 section.projects {
   font-family: var(--fuentePrimaria);
   text-align: center;
+
+}
+
+.projects p {
+
+}
+
+.projects h3 {
+
+} 
+
+.prjects img {
+  
 }
 
 
