--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,17 +196,23 @@ div.JS span {
 
 section.projects {
   font-family: var(--fuentePrimaria);
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items:  center;
   height: 100vh;
+  width: 100vw;
+  text-align: center;
 
 }
 
 .projects p {
   width: 70%;
   margin: 0 auto;
+  margin-top: 2em;
 }
 
 .projects h3 {
+
 
 } 
 
