--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,7 +244,8 @@ section.projects {
 }
 
 section#servicios {
-
+  display: grid;
+  grid-template: repeat(6, 1fr) / repeat(2, 1fr);
 }
 
 #servicios div.servicios {
@@ -256,5 +257,5 @@ section#servicios {
 }
 
 .servicios p {
-  
+
 }
