--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,6 +250,7 @@ section#servicios {
   text-align: center;
   font-family: var(--fuentePrimaria);
   font-size: 1.4em;
+  margin-top: 4em;
 }
 
 #servicios div.servicios {
