agregando margenes y padding a los titulos y parrafos (section#servicios terminada)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -254,11 +254,16 @@ section#servicios {
 }
 
 #servicios div.servicios {
+  padding: 1.4em;
 }
 
 .servicios h3 {
-
+  
 }
 
 .servicios p {
+  font-weight: lighter;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
