footer sin estilos terminado

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,3 +267,27 @@ section#servicios {
   margin: 0 auto;
   text-align: center;
 }
+
+footer {
+
+}
+
+footer h3 {
+
+}
+
+footer section#recomendaciones {
+
+}
+
+#recomendaciones div.rec {
+
+}
+
+.rec img {
+
+}
+
+.rec p {
+  
+}
