agregando color de fondo y de letra al footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,7 +269,8 @@ section#servicios {
 }
 
 footer {
-
+  background-color: black;
+  color: var(--colorSecundario);
 }
 
 footer h3 {
@@ -289,5 +290,5 @@ footer section#recomendaciones {
 }
 
 .rec p {
-  
+
 }
