--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -274,7 +274,10 @@ footer {
 }
 
 footer h3 {
-
+  font-family: var(--fuentePrimaria);
+  font-size: 2em;
+  text-align: center;
+  padding-top: 1em;
 }
 
 footer section#recomendaciones {
