agregando display flex, tipo y tamano de fuente a section#recomendaciones

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,11 +281,14 @@ footer h3 {
 }
 
 footer section#recomendaciones {
-
+  display: flex;
+  text-align: center;
+  font-family: var(--fuentePrimaria);
+  font-size: 1.1em;
+  font-weight: lighter;
 }
 
 #recomendaciones div.rec {
-
 }
 
 .rec img {
